template.yaml
# Commands for aws cli:
# Validate script - aws cloudformation validate-template --template-body file://template.yaml
# Create stack - aws cloudformation create-stack --stack-name testname --template-body file://template.yaml
# View created stack status - aws cloudformation describe-stacks --stack-name testname
# Delete stack - aws cloudformation delete-stack --stack-name testname

Description: Test template for week 1

Parameters:
  KeyName:
    Description: EC2 Instance SSH Key
    Type: AWS::EC2::KeyPair::KeyName
    Default: default-ssh-key

  EC2InstanceType:
    Description: EC2 instance type config
    Type: String
    Default: t2.micro

  EC2InstanceAmiId:
    Description: AMI ID for EC2
    Type: String
    Default: ami-026b57f3c383c2eec
  
  WebServerLaunchTemplateName:
    Description: Name for Launch Template
    Type: String
    Default: MyLaunchTemplate

Resources:
  WebServerLaunchTemplate:
    Type: AWS::EC2::LaunchTemplate
    Properties:
      LaunchTemplateName: !Ref WebServerLaunchTemplateName
      LaunchTemplateData:
        SecurityGroupIds:
          - !GetAtt SSHGroup.GroupId
          - !GetAtt HTTPGroup.GroupId
        ImageId: !Ref EC2InstanceAmiId
        InstanceType: !Ref EC2InstanceType
        KeyName: !Ref KeyName
        UserData:
          Fn::Base64:
            !Sub |
              #!/bin/bash
              sudo yum update -y
              sudo yum install yum install -y java-1.8.0

  WebServerAutoScalingGroup:
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      AutoScalingGroupName: MyAutoScalingGroup
      VPCZoneIdentifier:
        - subnet-0dc19cb80a2c11163
        - subnet-0aba90c57dec07c05
      LaunchTemplate:
        LaunchTemplateId: !Ref WebServerLaunchTemplate
        Version: !GetAtt WebServerLaunchTemplate.LatestVersionNumber
      MinSize: 2
      MaxSize: 3
      DesiredCapacity: 2

  SSHGroup:
    Description: ssh access group
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security group for EC2
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0

  HTTPGroup:
    Description: http access group
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security group for EC2
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
